New version, code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .env
 node_modules
+.idea/.gitignore
+.idea/ShortenerBot.iml
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+yarn-error.log
+yarn.lock
