--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "new_bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "shortener_bot",
+  "version": "1.1",
+  "description": "Bot for short links",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Divaltor",
   "license": "ISC",
-  "dependencies": {
-    "dotenv": "^8.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "request-promise-native": "^1.0.7",
-    "telegraf": "^3.30.1",
-    "telegraf-i18n": "^6.5.0",
-    "telegraf-session-redis": "^5.1.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Divaltor/ShortenerBot.git"
   },
-  "devDependencies": {
-    "eslint": "^5.16.0"
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "telegraf": "^3.30.1",
+    "telegraf-i18n": "^6.5.0"
   }
 }
