--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shortener_bot",
-  "version": "1.1",
+  "version": "1.1.1",
   "description": "Bot for short links",
   "main": "app.js",
   "scripts": {
@@ -15,7 +15,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
-    "telegraf": "^3.30.1",
-    "telegraf-i18n": "^6.5.0"
+    "telegraf": "^3.30.1"
   }
 }
